--- a/config.toml
+++ b/config.toml
@@ -44,20 +44,16 @@ disqusShortname = ""
 [menu]
 
   # main menu
-    [[menu.main]]
-  name = "Usergroups"
-  URL = "usergroups"
-  weight = 1
 
   [[menu.main]]
   name = "Blog"
   URL = "blog"
-  weight = 3
+  weight = 1
 
   [[menu.main]]
-  name = "Join us"
+  name = "About us"
   URL = "contact"
-  weight = 4
+  weight = 2
 
   # footer menu
   [[menu.footer]]
