updated mail links

--- a/config.toml
+++ b/config.toml
@@ -91,7 +91,7 @@ author = "Florian Moss"
 # Google Analitycs
 googleAnalyticsID = "UA-186141553-1"
 # Contact Information
-email = "uki-developers@redhat.com"
+email = "admin@ukidevelopers.co.uk"
 location = "UK & Ireland"
 # copyright
 copyright = ""
